src/test/deca/context/invalid/affectation-invalid-type.context
affectation-invalid-type.deca:12:
